--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8" /> /**/
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>galeria </title>
     <link rel="stylesheet" type="text/css" href="estilos.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="img/icono/ico.jfif">
 
   </head>
     <body>
@@ -50,7 +51,6 @@
 
  </div>
 
-</div>
 
 
   </body>
